--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
   "description": "Laravel Frontaccounting GraphQL",
   "type": "library",
   "license": "MIT",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "authors": [
     {
       "name": "Ary Wibowo",
@@ -17,7 +17,7 @@
   "minimum-stability": "stable",
   "autoload": {
     "psr-4": {
-      "LaravelWordpressGraphQL\\": "src/"
+      "Nucreativa\\LaravelFrontaccountingGraphQL\\": "src/"
     }
   }
 }
